# courier-dispatch-prediction-and-optimization

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-serve.txt  requirements.txt
config/: lade.yaml
notebooks/: 01_eda_validation.ipynb
src/dispatch/: __init__.py  assignment.py  config.py  dashboard.py  data.py  features.py  model.py  monitoring.py  snapshot.py  train.py
src/dispatch/api/: main.py  schemas.py
src/dispatch/stream/: bus.py  dispatcher.py  producer.py
tests/: conftest.py  test_api.py  test_assignment.py  test_dispatcher_live.py  test_features.py  test_monitoring.py
